log
lu., 28 de abr. de 2025 17:13:13: 
 treemap.c | 35 +++++++++++++++++++++++------------
 1 file changed, 23 insertions(+), 12 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
ma., 29 de abr. de 2025 12:41:46: 
 treemap.c | 38 ++++++++++++++++++++++++++++++++++----
 1 file changed, 34 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:61:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:58:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value)
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
24981c0
ma., 29 de abr. de 2025 12:46:33: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
e109af7
vi.,  2 de may. de 2025 18:35:18: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:65:12: error: too few arguments to function 'is_equal'
         if(is_equal(key, actual->pair->key))
            ^~~~~~~~
In file included from test.c:4:0:
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
In file included from test.c:4:0:
treemap.c:61:15: error: variable 'padre' set but not used [-Werror=unused-but-set-variable]
     TreeNode* padre = NULL;
               ^~~~~
cc1.exe: all warnings being treated as errors
a8ccbb1
vi.,  2 de may. de 2025 18:41:22: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:65:12: error: too few arguments to function 'is_equal'
         if(is_equal(key, actual->pair->key))
            ^~~~~~~~
In file included from test.c:4:0:
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
d86cdd4
vi.,  2 de may. de 2025 18:42:52: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:65:12: error: too few arguments to function 'is_equal'
         if(is_equal(actual->pair->key, key))
            ^~~~~~~~
In file included from test.c:4:0:
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
74655f0
